--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Menu de navegação -->
     <header>
       <a class="logo">
-        <img src="../img/DB-03.png" alt="" />
+        <img src="./img/DB-03.png" alt="" />
       </a>
 
       <nav class="navbar">
@@ -40,7 +40,7 @@
     <!-- Texto -->
     <section id="saibaMais" class="container second">
       <div class="content-container">
-        <img class="imagem" src="../img/imagem 2.png" alt="" />
+        <img class="imagem" src="./img/imagem 2.png" alt="" />
         <p class="text-right">
           O <span class="amarelo">Logo</span> é o rosto da sua empresa e ele
           precisa ser bem trabalhado para que ela tenha autenticidade e seja bem
@@ -70,25 +70,25 @@
           class="item-galeria item-galeria--1"
           href="https://www.behance.net/gallery/201975109/PKO-Branding-and-Visual-Identity"
         >
-          <img src="../img/pko.jpg" class="galeria__img" />
+          <img src="./img/pko.jpg" class="galeria__img" />
         </a>
         <a
           class="item-galeria item-galeria--2"
           href="https://www.behance.net/gallery/71817251/Rei-do-Mocoto"
         >
-          <img src="../img/reidomocoto.jpg" class="galeria__img" />
+          <img src="./img/reidomocoto.jpg" class="galeria__img" />
         </a>
         <a
           class="item-galeria item-galeria--3"
           href="https://www.behance.net/gallery/154133227/Neo-Citizen-Identidade-Visual"
         >
-          <img src="../img/neocitizen.jpg" class="galeria__img" />
+          <img src="./img/neocitizen.jpg" class="galeria__img" />
         </a>
         <a
           class="item-galeria item-galeria--4"
           href="https://www.behance.net/gallery/164392551/Pionne-Identidade-visual"
         >
-          <img src="../img/pione.jpg" class="galeria__img" />
+          <img src="./img/pione.jpg" class="galeria__img" />
         </a>
       </div>
       <div class="button-container2">
@@ -123,14 +123,14 @@
             </div>
           </form>
           <div class="imagem-formulario">
-            <img src="../img/DB_Prancheta 1.png" />
+            <img src="./img/DB_Prancheta 1.png" />
           </div>
         </div>
       </div>
     </section>
     <footer class="footer">
       <div>
-        <img src="../img/DB_Prancheta 1.png" >
+        <img src="./img/DB_Prancheta 1.png" >
       </div>
       <div class="copyright">
         <p>&copy; 2024 dBrienfing. Todos os direitos reservados.</p>
