--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </a>
       </div>
       <div class="button-container2">
-        <a class="button2" href="">Quero um projeto assim</a>
+        <a class="button2" href="#orcamento">Quero um projeto assim</a>
       </div>
       <hr>
     </section>
