--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <!-- Menu de navegação -->
     <header>
-      <a class="logo">
-        <img src="./img/DB-03.png" alt="" />
+      <a href="" class="logo">
+        <img src="./img/DB-03.png" alt="Logo" />
       </a>
 
       <nav class="navbar">
         <a href="">Home</a>
-        <a href="#">Contato</a>
+        <a href="#saibaMais">Saiba mais</a>
         <a href="#projetos">Nossos projetos</a>
         <a href="#orcamento">Orçamentos</a>
       </nav>
