--- a/index.html
+++ b/index.html
@@ -22,48 +22,56 @@
     </header>
 
     <!-- Banner -->
-    <section class="container">
-      <div class="text-container">
-        <p>
-          O primeiro contato do cliente com você é sua
-          <span class="amarelo">Logo</span>.
-        </p>
-        <br />
-        <p>Chega de passar uma má impressão.</p>
-      </div>
-      <div class="button-container">
-        <a class="button" href="#saibaMais">Saiba mais</a>
-        <a class="button" href="#orcamento">Solicite Orçamento</a>
+    <section class="container1">
+      <div class="banner-container">
+        <div class="banner-content">
+          <p>
+            O primeiro contato do cliente com você é sua
+            <span class="amarelo">Logo</span>.
+          </p>
+          <br />
+          <p>Chega de passar uma má impressão.</p>
+          <div class="banner-button">
+            <a class="button" href="#saibaMais">Saiba mais</a>
+            <a class="button" href="#orcamento">Solicite Orçamento</a>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- Texto -->
-    <section id="saibaMais" class="container second">
+    <!-- Saiba mais -->
+    <section id="saibaMais" class="container">
       <div class="content-container">
-        <img class="imagem" src="./img/imagem 2.png" alt="" />
-        <p class="text-right">
-          O <span class="amarelo">Logo</span> é o rosto da sua empresa e ele
-          precisa ser bem trabalhado para que ela tenha autenticidade e seja bem
-          lembrada no mercado.
-        </p>
+        <div class="img-container">
+          <img class="imagem" src="./img/imagem 2.png" alt="" />
+        </div>
+        <div class="text-container">
+          <p class="text-right">
+            O <span class="amarelo">Logo</span> é o rosto da sua empresa e ele
+            precisa ser bem trabalhado para que ela tenha autenticidade e seja bem
+            lembrada no mercado.
+          </p>
+        </div>
       </div>
-      <div class="content-container">
-        <p class="text-left">
-          Na <span class="roxo">dBriefing</span> trabalhamos com uma metodologia
-          própria para criar o logo e a identidade visual da sua empresa e,
-          durante os mais de 10 anos de mercado, já entregamos mais de 120
-          marcas, com mais de 99% de aprovação imediata.
-        </p>
-        <div class="second-button">
+      <div class="content-container2">
+        <dir class="text-container">
+          <p class="text-left">
+            Na <span class="roxo">dBriefing</span> trabalhamos com uma metodologia
+            própria para criar o logo e a identidade visual da sua empresa e,
+            durante os mais de 10 anos de mercado, já entregamos mais de 120
+            marcas, com mais de 99% de aprovação imediata.
+          </p>
+        </dir>
+        <div class="text-button">
           <a class="button2" href="#orcamento">Solicite Orçamento</a>
         </div>
       </div>
     </section>
 
     <!-- Nosso projetos-->
-    <section id="projetos" class="second">
+    <section id="projetos" class="container">
       <div class="titulo">
-        <h3>Nossos projetos</h3>
+        <h3>Nosso Projetos</h3>
       </div>
       <div class="galeria">
         <a
@@ -94,14 +102,17 @@
       <div class="button-container2">
         <a class="button2" href="#orcamento">Quero um projeto assim</a>
       </div>
-      <hr>
+      <hr />
     </section>
+
     <!-- Formulario -->
-    <section id="orcamento" class="third">
+    <section id="orcamento" class="container">
       <div class="formulario-container">
-        <div class="formulario-area" >
+        <div class="formulario-area">
           <form>
-            <h3>Solicite um Orçamento</h3>
+            <div class="form-titulo">
+              <h3>Solicite um Orçamento</h3>
+            </div>
             <div class="input-area">
               <input type="text" placeholder="Nome" />
             </div>
@@ -128,9 +139,11 @@
         </div>
       </div>
     </section>
+
+    <!-- rodapé -->
     <footer class="footer">
       <div>
-        <img src="./img/DB_Prancheta 1.png" >
+        <img src="./img/DB_Prancheta 1.png" />
       </div>
       <div class="copyright">
         <p>&copy; 2024 dBrienfing. Todos os direitos reservados.</p>
