--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/43d4ebaf74.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="menuHamburguer.js" defer></script>
     <title>dBriefing</title>
   </head>
   <body>
@@ -19,6 +24,25 @@
         <a href="#projetos">Nossos projetos</a>
         <a href="#orcamento">Orçamentos</a>
       </nav>
+
+      <div class="btn-abrir-menu" id="btn-menu">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+      <div class="hamburguer" id="menu-mobile">
+        <div class="btn-fechar" id="btn-fechar">
+          <i class="fa-solid fa-x"></i>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="#saibaMais">Saiba mais</a></li>
+            <li><a href="#projetos">Nossos Projetos</a></li>
+            <li><a href="#orcamento">Orçamentos</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="overlay-menu" id="overlay-menu"></div>
     </header>
 
     <!-- Banner -->
@@ -48,18 +72,18 @@
         <div class="text-container">
           <p class="text-right">
             O <span class="amarelo">Logo</span> é o rosto da sua empresa e ele
-            precisa ser bem trabalhado para que ela tenha autenticidade e seja bem
-            lembrada no mercado.
+            precisa ser bem trabalhado para que ela tenha autenticidade e seja
+            bem lembrada no mercado.
           </p>
         </div>
       </div>
       <div class="content-container2">
         <dir class="text-container">
           <p class="text-left">
-            Na <span class="roxo">dBriefing</span> trabalhamos com uma metodologia
-            própria para criar o logo e a identidade visual da sua empresa e,
-            durante os mais de 10 anos de mercado, já entregamos mais de 120
-            marcas, com mais de 99% de aprovação imediata.
+            Na <span class="roxo">dBriefing</span> trabalhamos com uma
+            metodologia própria para criar o logo e a identidade visual da sua
+            empresa e, durante os mais de 10 anos de mercado, já entregamos mais
+            de 120 marcas, com mais de 99% de aprovação imediata.
           </p>
         </dir>
         <div class="text-button">
